Fixed font-sizings/spacing for desktop view and fixed box-shadow properties

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
     max-width: 85%;
     background-color: rgb(255, 255, 255);
     border-radius: 8px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 12px 24px 2px rgba(0, 0, 0, 0.15);
     overflow: hidden;
 }
 
@@ -80,7 +80,7 @@ body {
     background-color: rgb(192, 223, 52);
     border: none;
     border-radius: 6px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 12px 24px 2px rgba(0, 0, 0, 0.15);
     cursor: pointer;
     padding: 0.85em 6.75em;
     margin-top: 1.25em;
@@ -110,7 +110,21 @@ body {
         display: grid;
         grid-template-rows: 45% 1fr;
         grid-template-columns: 1fr 1fr;
-        max-width: 680px;
+        max-width: 600px;
+    }
+
+    .card-heading {
+        font-size: 1.375rem;
+        margin-bottom: 1em;
+    }
+
+    .card-subheading {
+        font-size: 1.125rem;
+        margin-bottom: 0.5em;
+    }
+
+    .card-body {
+        font-size: 0.95rem;
     }
 
     .section-one {
@@ -121,6 +135,10 @@ body {
 
     .section-two {
         padding: 2em;
+    }
+
+    .sign-up-btn {
+        padding: 0.85em 5.5em;
     }
 
     .section-three {
